Added final expandable query information card, info feed needs to be implemented. Testing best way to implement data pulling for info feed cards, cards for info feed redesigned (not yet implemented in layout file).

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,10 +6,13 @@
 
 
     <string name="firstCardTitle">Driver query</string>
-    <string name = "firstCardDescription">To query driver, enter year and driver\'s last name</string>
+    <string name ="firstCardDescription">To query results of a driver during a season, enter year and driver\'s last name.</string>
+
     <string name="secondCardTitle">Circuit query</string>
-    <string name="secondCardDescription">To query race results for a circuit, enter year and circuit name</string>
+    <string name="secondCardDescription">To query race results for a circuit, enter year and circuit name.</string>
+
     <string name="thirdCardTitle">Team query</string>
-    <string name="thirdCardDescription">To query results of a team, enter year and the name of the team</string>
+    <string name="thirdCardDescription">To query results of a team during a season, enter year and the name of the team.</string>
+
 
 </resources>
