--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,9 @@
     <string name="thirdCardTitle">Team query</string>
     <string name="thirdCardDescription">To query results of a team during a season, enter year and the name of the team.</string>
 
+    <string name="infoFeedItems_info1TextView">Corners : </string>
+    <string name="infoFeedItems_info2TextView">Length : </string>
+    <string name="infoFeedItems_showCoordinatesButton">Show circuit</string>
+
 
 </resources>
